--- a/src/app/aki/containers/aki/aki.component.scss
+++ b/src/app/aki/containers/aki/aki.component.scss
@@ -1,14 +1,16 @@
 .container {
+  // position: relative;
   display: flex;
-  height: 100%;
+  height: 80%;
   flex-direction: row;
 }
 
-.results {
-  flex: 1;
-  padding: 15px 20px;
-}
+// .feature-table {
+//   // position: relative;
+//   top:30%;
+// }
 
-.option {
-  width: 23%;
-}
+// .threshold_many_table{
+//   display: flex;
+//   width: 30%;
+// }
