--- a/src/app/login/containers/login/login.component.html
+++ b/src/app/login/containers/login/login.component.html
@@ -1,7 +1,3 @@
-<div *ngIf="userinfo.login">
-  <h2>欢迎！！</h2>
-  <button type="button">退出登录</button>
-</div>
 <div *ngIf="!userinfo.login">
   <div class="logo">
     <img src="./assets/project-logo.png"/>
@@ -36,13 +32,16 @@
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
-    <div nz-row class="login-form-margin">
+    <!-- <div nz-row class="login-form-margin">
       <div nz-col [nzSpan]="12">
         <label nz-checkbox formControlName="remember">
           <span>记住我</span>
         </label>
       </div>
-    </div>
+    </div> -->
+    <div class="usernotexist_message" *ngIf = "show_usernotexist_message">该用户不存在！请检查您的用户名</div>
+    <div class="passworderror_message" *ngIf="show_passworderror_message">密码错误！请检查您的密码</div>
+    <h2></h2>
     <button
       nz-button
       class="login-form-button login-form-margin"
@@ -51,8 +50,8 @@
       登录
     </button>
     <div nz-col [nzSpan]="20" class="forgotAndRegister">
-      <a class="forgot">忘记密码？</a>
-      <a class="register" routerLink = "/register"> 注册账户</a>
+      <!-- <a class="forgot">忘记密码？</a> -->
+      <a class="register" routerLink = "/register" click="onRegister()"> 注册账户</a>
     </div>
   </form>
 </div>
