--- a/src/app/shared/components/model-results/model-results.component.html
+++ b/src/app/shared/components/model-results/model-results.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="showResults" class="container">
+  <h2>疾病预测结果如下：</h2>
   <ngx-charts-line-chart
     [results]="data"
     [scheme]="colorScheme"
