--- a/src/app/shared/components/threshold/threshold.component.scss
+++ b/src/app/shared/components/threshold/threshold.component.scss
@@ -1,7 +1,5 @@
 .container {
   display: grid;
-  width: 460px;
+  width: 100%;
   height: 300px;
-  margin-top: 10px;
-  // margin-bottom: 10px;
 }
