--- a/src/app/user/containers/user/user.component.html
+++ b/src/app/user/containers/user/user.component.html
@@ -1,98 +1,211 @@
 <div class="container">
-  <div *ngIf="userinfo.login">
-    <div nz-row [nzGutter]="8">
-      <div nz-col [nzSpan]="8">
-        <h2>{{ userinfo.username }},欢迎！！！</h2>
-      </div>
-      <div nz-col [nzSpan]="12"></div>
-      <div nz-col [nzSpan]="4">
-        <button
-          mat-flat-button
-          color="primary"
-          (click)="logout()"
-          [disabled]="isLoading$ | async"
-        >
-          <!-- <mat-icon>add</mat-icon> -->
-          退出登录
-        </button>
-      </div>
+  <div nz-row [nzGutter]="8">
+    <div nz-col [nzSpan]="8">
+      <h2>{{ userinfo.username }},欢迎！！！</h2>
     </div>
-
-    <div nz-row [nzGutter]="8">
-      <h3>当前时间是 {{ date }}</h3>
+    <div nz-col [nzSpan]="12"></div>
+    <div nz-col [nzSpan]="4">
+      <button
+        mat-flat-button
+        color="primary"
+        (click)="logout()"
+        [disabled]="isLoading$ | async"
+      >
+        <!-- <mat-icon>add</mat-icon> -->
+        退出登录
+      </button>
     </div>
-    <div nz-row [nzGutter]="8">
-      <div nz-col [nzSpan]="6">
-        <h3>您的收藏夹：</h3>
-      </div>
-      <div nz-col [nzSpan]="14"></div>
-      <div nz-col [nzSpan]="4">
-        <button
-          mat-flat-button
-          color="primary"
-          (click)="refresh()"
-          [disabled]="isLoading$ | async"
-        >
-          <!-- <mat-icon>add</mat-icon> -->
-          刷新收藏夹
-        </button>
-      </div>
+  </div>
 
-      <div nz-col [nzSpan]="24" class="card_fav">
-        <!-- <nz-card nzTitle="收藏夹">
-          <p>Card content</p>
-            <app-user-favtable
-            [favorites]="favorites$ | async"
-            [isLoading]="isLoading$ | async"
-            (favoriteClick)="onFavoriteClicked($event)"
-          ></app-user-favtable>
-          <p>Card content</p>
-        </nz-card> -->
+  <div nz-row [nzGutter]="8">
+    <h3>当前时间是 {{ date }}</h3>
+  </div>
 
-        <app-user-favtable
-          [favorites]="favorites$ | async"
-          [isLoading]="isLoading$ | async"
-          (favoriteClick)="onFavoriteClicked($event)"
-        ></app-user-favtable>
-      </div>
-      <!-- <div nz-col [nzSpan]="12" class="card_log">
+  <div nz-row [nzGutter]="8">
+    <div nz-col [nzSpan]="6">
+      <h3>您的收藏夹：</h3>
+    </div>
+    <div nz-col [nzSpan]="14"></div>
+    <div nz-col [nzSpan]="4">
+      <button
+        mat-flat-button
+        color="primary"
+        nzShape="round"
+        (click)="refresh()"
+        [disabled]="isLoading$ | async"
+      >
+        <mat-icon>refresh</mat-icon>
+        刷新收藏夹
+      </button>
+    </div>
+  </div>
+  <div nz-row [nzGutter]="8">
+    <div nz-col [nzSpan]="24" class="card_fav">
+      <app-user-favtable
+        [favorites]="favorites$ | async"
+        [isLoading]="isLoading$ | async"
+        (favoriteClick)="onFavoriteClicked($event)"
+      ></app-user-favtable>
+    </div>
+  </div>
+
+  <div nz-row [nzGutter]="8">
+    <div nz-col [nzSpan]="6">
+      <h3>用户管理：</h3>
+    </div>
+    <div nz-col [nzSpan]="14"></div>
+    <div nz-col [nzSpan]="4">
+      <button
+        mat-flat-button
+        color="primary"
+        nzShape="round"
+        (click)="refresh()"
+        [disabled]="isLoading$ | async"
+      >
+        <mat-icon>refresh</mat-icon>
+        刷新用户管理
+      </button>
+    </div>
+  </div>
+
+  <div nz-row [nzGutter]="8" *ngIf="userinfo.level == 1">
+    <div nz-col [nzSpan]="24" class="card_fav">
+      <ag-grid-angular
+        style="width: 100%; height: 100%"
+        class="ag-theme-material"
+        [rowData]="users"
+        [columnDefs]="columnDefs"
+        [suppressCellSelection]="true"
+        (firstDataRendered)="onFirstDataRendered($event)"
+        (gridReady)="onGridReady($event)"
+        (rowClicked)="onRowClicked($event)"
+      ></ag-grid-angular>
+    </div>
+  </div>
+  <!-- <div nz-col [nzSpan]="12" class="card_log">
           <app-user-favtable
             [favorites]="favorites$ | async"
             [isLoading]="isLoading$ | async"
             (favoriteClick)="onFavoriteClicked($event)"
           ></app-user-favtable>
       </div> -->
-    </div>
-  </div>
 </div>
 
 <!-- 收藏对话框 -->
 <nz-modal
   [(nzVisible)]="isVisible_fav_modal"
-  nzTitle="收藏"
+  nzTitle="收藏信息"
   (nzOnCancel)="handleCancel_fav_modal()"
 >
   <ng-container *nzModalContent>
-    <nz-input-group nzAddOnBefore="id:">
-      <input type="text" nz-input [(ngModel)]="selected_favinfo.id" />
-    </nz-input-group>
-    <h2></h2>
-    <h4>备注：</h4>
-    <textarea
-      rows="4"
-      nz-input
-      [(ngModel)]="selected_favinfo.remark"
-    ></textarea>
+    <h4>id:{{ selected_favinfo.id }}</h4>
+    <h4>备注：{{ selected_favinfo.remark }}</h4>
+    <div *ngIf="modify_model">
+      <hr />
+      <h4></h4>
+      <nz-input-group nzAddOnBefore="id:">
+        <input type="text" nz-input [(ngModel)]="modified_id" />
+      </nz-input-group>
+      <h2></h2>
+      <h4>备注：</h4>
+      <textarea rows="4" nz-input [(ngModel)]="modified_remark"></textarea>
+    </div>
   </ng-container>
   <div *nzModalFooter>
-    <button nz-button nzType="default" (click)="deleteFavorite()">
-      删除该收藏
-    </button>
-    <button nz-button nzType="default" (click)="loadSelectedFavorite()">
-      加载当前病历
-    </button>
-    <button nz-button nzType="primary" (click)="handleOk_fav_modal()">
-      确定
-    </button>
+    <div nz-row [nzGutter]="8" *ngIf="!modify_model">
+      <div nz-col [nzSpan]="4">
+        <button
+          nz-button
+          nzDanger="true"
+          nzType="primary"
+          (click)="showDeleteFavoriteConfirm()"
+        >
+          删除该收藏
+        </button>
+      </div>
+      <div nz-col [nzSpan]="20">
+        <button nz-button nzType="default" (click)="loadSelectedFavorite()">
+          加载当前病历
+        </button>
+        <button nz-button nzType="default" (click)="changeToModifyModel()">
+          修改收藏信息
+        </button>
+      </div>
+    </div>
+    <div nz-row [nzGutter]="8" *ngIf="modify_model">
+      <div nz-col [nzSpan]="4">
+        <button nz-button nzType="primary" (click)="modifySelectedFavorite()">
+          确认修改
+        </button>
+      </div>
+      <div nz-col [nzSpan]="15"></div>
+      <div nz-col [nzSpan]="4">
+        <button nz-button nzType="default" (click)="cancelModify()">
+          取消修改
+        </button>
+      </div>
+    </div>
+  </div>
+</nz-modal>
+
+<!-- 删除确认对话框 -->
+<nz-modal
+  [(nzVisible)]="isVisible_delete_fav_confirm_modal"
+  nzTitle="删除确认"
+  (nzOnCancel)="cancelDelete()"
+>
+  <ng-container *nzModalContent>
+    <h4>您确定要删除该收藏吗？</h4>
+  </ng-container>
+  <div *nzModalFooter>
+    <div nz-row [nzGutter]="8">
+      <div nz-col [nzSpan]="4">
+        <button nz-button nzType="primary" (click)="deleteFavorite()">
+          确认删除
+        </button>
+      </div>
+      <div nz-col [nzSpan]="15"></div>
+      <div nz-col [nzSpan]="4">
+        <button nz-button nzType="default" (click)="cancelDelete()">
+          取消删除
+        </button>
+      </div>
+    </div>
+  </div>
+</nz-modal>
+
+<!-- 用户管理对话框 -->
+<nz-modal
+  [(nzVisible)]="isVisible_user_modal"
+  nzTitle="账户权限管理"
+  (nzOnCancel)="handleCancel_user_modal()"
+>
+  <ng-container *nzModalContent>
+    <h4>用户名：{{ selected_userinfo.username }}</h4>
+    <h4>邮箱：{{ selected_userinfo.email }}</h4>
+    <h4>电话号码：{{ selected_userinfo.phone }}</h4>
+    <h4>权限等级：</h4>
+    <div nz-row [nzGutter]="8">
+      <div nz-col [nzSpan]="6"></div>
+      <div nz-col [nzSpan]="12">
+        <nz-radio-group [(ngModel)]="modified_level">
+          <label nz-radio nzValue="A" [nzDisabled]="true">1</label>
+          <label nz-radio nzValue="B" [nzDisabled] = "selected_userinfo.level == 1">2</label>
+          <label nz-radio nzValue="C" [nzDisabled] = "selected_userinfo.level == 1">3</label>
+          <label nz-radio nzValue="Z" [nzDisabled] = "selected_userinfo.level == 1">-1</label>
+        </nz-radio-group>
+      </div>
+      <div nz-col [nzSpan]="6"></div>
+    </div>
+  </ng-container>
+  <div *nzModalFooter>
+    <div nz-row [nzGutter]="8">
+      <div nz-col [nzSpan]="20"></div>
+      <div nz-col [nzSpan]="4">
+        <button nz-button nzType="primary" [disabled] = "selected_userinfo.level == 1" (click)="modifySelectedUserLevel()">
+          确认修改
+        </button>
+      </div>
+    </div>
   </div>
 </nz-modal>
