答辩验收版本
系统开发彻底完成，准备答辩验收

--- a/src/app/login/containers/login/login.component.scss
+++ b/src/app/login/containers/login/login.component.scss
@@ -1,7 +1,7 @@
 .login-form {
   max-width: 300px;
   position: relative;
-  top: 30%;
+  margin-top: 5%;
   left: 35%;
   // margin-left: -($width / 2);
   // margin-top: -($height / 2);
@@ -37,7 +37,7 @@
 .logo {
   max-width: 300px;
   position: relative;
-  top: 10%;
+  margin-top: 5%;
   left: 20%;
   // position: absolute;
   // left: 50%;
