--- a/src/app/shared/components/data-operations/data-operations.component.html
+++ b/src/app/shared/components/data-operations/data-operations.component.html
@@ -39,7 +39,7 @@
     (click)="onThresholdWarning()"
     [disabled]="isLoading || disableInfer"
   >
-    阈值预警设置
+    阈值筛查设置
   </button>
   <!-- TODO: -->
   <button mat-flat-button color="primary" (click)="onCallSimilarity()">
