--- a/src/app/mi/containers/mi/mi.component.scss
+++ b/src/app/mi/containers/mi/mi.component.scss
@@ -1,10 +1,10 @@
 .container {
   display: flex;
-  height: 100%;
+  height: 80%;
   flex-direction: row;
 }
 
-.results {
-  flex: 1;
-  padding: 15px 20px;
+.threshold_options_area {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
