--- a/src/app/ner/containers/ner/ner.component.scss
+++ b/src/app/ner/containers/ner/ner.component.scss
@@ -1,31 +1,36 @@
-.stringUploadArea {
-  position: relative;
-  // height: 100%;
-  width: 40%;
-  left: 0%;
-  .clear_button {
-    position: relative;
-    height: 32px;
-    width: 60px;
-    left: 66%;
-  }
-}
-.fileUploadArea {
-  position: relative;
-  height: 24%;
-  width: 40%;
-  top: -40%;
-  left: 55%;
-  .clear_button2 {
-    position: relative;
-    height: 32px;
-    width: 60px;
-    left: 66%;
-  }
-}
+// .stringUploadArea {
+//   position: relative;
+//   // height: 100%;
+//   width: 40%;
+//   left: 0%;
+//   .clear_button {
+//     position: relative;
+//     height: 32px;
+//     width: 60px;
+//     left: 66%;
+//   }
+// }
+// .fileUploadArea {
+//   position: relative;
+//   height: 20%;
+//   width: 40%;
+//   top: -40%;
+//   left: 55%;
+//   .clear_button2 {
+//     position: relative;
+//     height: 32px;
+//     width: 60px;
+//     left: 66%;
+//   }
+// }
 
-.entities_table {
-  position: relative;
-  top: -5%;
-  height: 40%;
-}
+// .importByFile_button{
+//   position: relative;
+//   top: 50%;
+// }
+
+// .entities_table {
+//   position: relative;
+//   top: -5%;
+//   height: 40%;
+// }
