--- a/src/app/register/containers/register/register.component.scss
+++ b/src/app/register/containers/register/register.component.scss
@@ -1,7 +1,7 @@
 [nz-form] {
   max-width: 600px;
   position: relative;
-  top: 10%;
+  margin-top: 5%;
   left: 23%;
 }
 
@@ -24,7 +24,7 @@
 .logo {
   max-width: 300px;
   position: relative;
-  top: 5%;
+  margin-top: 0%;
   left: 20%;
   // position: absolute;
   // left: 50%;
